--- a/src/index.html
+++ b/src/index.html
@@ -11,3 +11,12 @@
   <app-root></app-root>
 </body>
 </html>
+
+<style>
+html {
+  margin: 0;
+  padding: 0;
+  background-color: black;
+}
+
+</style>
